test-suite/samples/typeckr/pass/others/problem-1.slt
type That = {
	len: (a: number) -> number,
} & {
	concat: () -> string,
}
local cool: That = {
	len = function(a)
		return 1
	end,
	concat = function()
		return ""
	end,
}