test-suite/samples/typeckr/fail/call-expression/unmatched_arg.slt
local foo = function(value: string) -> string
	return "bar"
end
foo(10)